# standalone_cxx

./: CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
bfcompile/: CMakeLists.txt  main.cpp
bfcompile/src/: main.cpp
bfelf_loader/: CMakeLists.txt
bfelf_loader/include/: bfelf_loader.h  bfelf_loader_private.h
bfruntime/: CMakeLists.txt
bfruntime/src/: crt.cpp  pthread.cpp  syscalls.cpp
bfruntime/src/arch/x64/: sp.S  start.S  syscall.S
bfruntime/src/crt/: crt.cpp
bfruntime/src/crt/arch/x64/: start.S
bfruntime/src/pthread/: pthread.cpp
bfruntime/src/syscall/: syscalls.cpp
bfruntime/src/syscall/arch/x64/: syscall.S
bfsdk/: CMakeLists.txt
bfsdk/include/: bfehframelist.h  bfexec.h  bfstart.h  bfsyscall.h  bfthreadcontext.h  bftypes.h  bfweak.h
bfsdk/src/arch/x64/: threadcontext.S
bfunwind/: CMakeLists.txt
bfunwind/include/: abort.h  dwarf4.h  eh_frame.h  misc.h  registers_intel_x64.h
bfunwind/src/: eh_frame.cpp  ia64_cxx_abi.cpp
bfunwind/src/arch/intel_x64/: registers_intel_x64.S
catch/: CMakeLists.txt
cmake/: binutils.cmake  catch2.cmake  config.cmake  default.cmake  gnuefi.cmake  libcxx.cmake  libcxxabi.cmake  llvm.cmake  macros.cmake  newlib.cmake  target.cmake
cmake/depends/: binutils.cmake  catch2.cmake  gnuefi.cmake  libcxx.cmake  libcxxabi.cmake  llvm.cmake  newlib.cmake
cmake/toolchain/: efi_x86_64.cmake  intel_x86_64.cmake
examples/: CMakeLists.txt
examples/compile/: CMakeLists.txt  compile.cpp  compile.sh  compile_loader.cpp  compile_payload.cpp
examples/filecmp/: CMakeLists.txt  main.cpp
examples/loader/: CMakeLists.txt  bfexec.cpp  bfexec_no_optional.cpp  bfexec_with_custom_heap_size.cpp  bfexecs.cpp  bfexecs_no_include_allocations.cpp  bfexecs_with_custom_heap.cpp  bfexecs_with_custom_heap_size.cpp  bfexecs_with_manual_allocations.cpp  bfexecv.cpp  bfexecv_no_optional.cpp  bfexecv_with_custom_heap_size.cpp  incbin.S  loader_from_embedded.cpp  loader_from_file.cpp  main.cpp
examples/payload/: CMakeLists.txt  CMakeToolchain.cmake  linker.ld  payload.S  payload.c
examples/tests/: CMakeLists.txt  empty.cpp  hello_bareflank.cpp  hello_world.cpp  hello_world_printf.cpp  main.cpp
examples/uefi/: CMakeLists.txt  CMakeToolchain.cmake  main.c
